--- a/public/templates/categories.hbs
+++ b/public/templates/categories.hbs
@@ -2,7 +2,7 @@
     <div class="jumbotron">
         <div class="container">
             <div class="text-center">
-                <h1>No more boring reviews.</h1>
+                <h1 id="main">No more boring reviews.</h1>
                 <p>Read a few bullet points, watch some videos and make a decision.</p>
             </div>
         </div>
