--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -1,20 +1,17 @@
-<div class="wrapper">
+<div id="prod-head" class="wrapper">
     <ol class="breadcrumb">
       <li><a href="#">Categories</a></li>
       <li><a href="#/categories/{{categories.id}}">{{categories.name}}</a></li>
       <li class="active">{{name}}</li>
     </ol>
     <div class="row section">
-        <h1>{{name}}<span class="hashtag">#{{hashtag}}</span></h1>
+        <h1 class = "product">{{name}}<span class="hashtag">#{{hashtag}}</span></h1>
     </div>
 
     <div class="section">
         <div class="row">
             <div class="col-xs-6 text-center">
                 <img src="/img/positive.png" src="Positive">
-            </div>
-            <div class="col-xs-6 text-center">
-                <img src="/img/negative.png" src="Negative">
             </div>
         </div>
         <div class="row">
