added back negative.png

--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -13,6 +13,9 @@
             <div class="col-xs-6 text-center">
                 <img src="/img/positive.png" src="Positive">
             </div>
+-            <div class="col-xs-6 text-center">
+-                <img src="/img/negative.png" src="Negative">
+-            </div>
         </div>
         <div class="row">
             <div class="col-xs-6">
