--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -206,6 +206,7 @@ div .text-center {
     font-size:1.5em;
     cursor: pointer;
     font-weight:200;
+    text-transform: uppercase;
 }
 
 #positive-input:focus, #negative-input:focus{
@@ -505,6 +506,7 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[ty
     overflow:hidden;
     box-shadow: inset 0 -4px 0 rgba(0,0,0,0.1);
     -webkit-box-shadow: inset 0 -4px 0 rgba(0,0,0,0.1);
+    text-transform: uppercase;
 }
 
 .agree{
